<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MaterialDirector</string>
	<string name="menu_1">Settings</string>
	<string name="menu_4">Exit</string>
	<string name="dr_1">Start AIDE</string>
	<string name="dr_sub">Other</string>
	<string name="dr_device">Device</string>
	<string name="dr_2_1">About</string>
	<string name="pref_1">Default Directory</string>
	<string name="pref_cat_1">OutPut</string>
	<string name="ec_1">Create Eclipse Project</string>
	<string name="ec_2">Attention,".jar" libraries required manual addition!</string>
	<string name="gra_1">Create Gradle Project</string>
	<string name="gra_2">Attention,m2repository has been installed.Complier may run error</string>
	<string name="gra_granted">m2res Installed</string>
	<string name="create_1">ApplicationLabel</string>
	<string name="create_2">Package Name</string>
	<string name="create_3">Folder Path</string>
	<string name="create_4">Add Permission</string>
	<string name="create_5">ThemeColor</string>
	<string name="create_spinner_1_1">MainActivity(drawer)</string>
	<string name="create_spinner_1_2">MainActivity(drawer)+PreferencesAct</string>
	<string name="create_spinner_1_3">MA(drawer)+Pre+Activity</string>
	<string name="create_spinner_2_1">Light Theme</string>
	<string name="create_spinnet_2_2">Dark Theme</string>
	<string name="create_per">Permission</string>
	<string name="cvad">Create Project</string>
	<string name="perm_req">Permission Denied</string>
	<string name="perm_msg">App will exit,retry?</string>
	<string name="perm_pb">Retry</string>
	<string name="perm_nb">Exit</string>
	
	<string name="perm_1">访问登记属性</string>
	<string name="perm_2">获取粗略位置(30-1500m误差)</string>
	<string name="perm_3">获取详细位置(10m之内误差)</string>
	<string name="perm_4">访问第三方定位指令</string>
	<string name="perm_5">GPS模拟定位信息(开发者调试)</string>
	<string name="perm_6">获取网络状态</string>
	<string name="perm_7">访问SurfaceFlinger(预览与截图)</string>
	<string name="perm_8">获取WiFi状态</string>
	<string name="perm_9">账户管理(ACCOUNT_MANAGE)</string>
	<string name="perm_10">获取账户</string>
	<string name="perm_p_11">添加语音信息</string>
	<string name="perm_11">电量统计</string>
	<string name="perm_p_12">身体传感器</string>
	<string name="perm_12">绑定小插件(几乎废弃)</string>
	<string name="perm_13">绑定设备管理(priv-app)</string>
	<string name="perm_14">绑定输入法(priv-app)</string>
	<string name="perm_15">绑定RemoteView(priv-app)</string>
	<string name="perm_16">绑定壁纸(priv-app)</string>
	<string name="perm_17">使用蓝牙</string>
	<string name="perm_18">蓝牙管理</string>
	<string name="perm_19">变砖(priv-app)</string>
	<string name="perm_20">应用删除广播</string>
	<string name="perm_21">收到短信时广播</string>
	<string name="perm_22">允许连续接受多个广播</string>
	<string name="perm_23">WAPPUSH广播</string>
	<string name="perm_24">拨打电话(系统拨号器)</string>
	<string name="perm_25">拨打电话(取代整个系统拨号)</string>
	<string name="perm_26">访问摄像头</string>
	<string name="perm_27">改变组件状态</string>
	<string name="perm_28">改变配置(网络,定位)</string>
	<string name="perm_29">改变网络状态</string>
	<string name="perm_30">改变WiFi多播状态</string>
	<string name="perm_31">改变WiFi状态</string>
	<string name="perm_32">清除应用缓存</string>
	<string name="perm_33">清除应用数据</string>
	<string name="perm_34">禁止位置更新提示</string>
	<string name="perm_35">允许程序删除缓存文件</string>
	<string name="perm_36">允许程序删除包</string>
	<string name="perm_37">允许访问底层电源管理</string>
	<string name="perm_38">允许程序RW诊断资源</string>
	<string name="perm_39">允许程序禁用键盘锁</string>
	<string name="perm_40">允许获取系统DUMP信息</string>
	<string name="perm_41">允许程序展开,收缩状态栏</string>
	<string name="perm_42">允许程序运行工厂模式</string>
	<string name="perm_43">闪光灯</string>
	<string name="perm_44">强制使用BACK按键,无论是否为栈顶Activity</string>
	<string name="perm_45">访问账户Gmail列表</string>
	<string name="perm_46">获取应用大小</string>
	<string name="perm_47">获取当前或最近运行的应用(废弃)</string>
	<string name="perm_48">获取栈顶Ac</string>
	<string name="perm_49">允许使用全局搜索</string>
	<string name="perm_50">访问硬件辅助设备(硬件测试)</string>
	<string name="perm_51">注射事件,获取应用底层事件</string>
	<string name="perm_52">安装定位提供</string>
	<string name="perm_53">添加桌面快捷方式</string>
	<string name="perm_54">应用内部创建窗口(priv-app)</string>
	<string name="perm_55">访问网络</string>
	<string name="perm_56">结束后台进程</string>
	<string name="perm_57">访问定位硬件</string>
	<string name="perm_58">管理账户(MANAGE_ACCOUNT)</string>
	<string name="perm_59">管理程序引用(priv-app)</string>
	<string name="perm_60">软格式化</string>
	<string name="perm_61">修改声音信息</string>
	<string name="perm_62">修改电话状态eg.飞行</string>
	<string name="perm_63">格式化文件系统</string>
	<string name="perm_64">挂载/卸载文件系统</string>
	<string name="perm_65">NFC</string>
	<string name="perm_66">永久Activity(废弃)</string>
	<string name="perm_67">控制拨号器(eg.中断拨号)</string>
	<string name="perm_68">读取日程</string>
	<string name="perm_69">读取通话记录</string>
	<string name="perm_70">读取联系人</string>
	<string name="perm_71">读取外部存储</string>
	<string name="perm_72">读取帧(缓存屏幕截图)</string>
	<string name="perm_73">读取历史记录,书签</string>
	<string name="perm_74">读取输入状态(priv-app)</string>
	<string name="perm_75">读取系统日志</string>
	<string name="perm_76">读取电话状态</string>
	<string name="perm_77">读取状态文件</string>
	<string name="perm_78">读取短信</string>
	<string name="perm_79">读取社交流(废弃)</string>
	<string name="perm_80">读取同步设置</string>
	<string name="perm_81">读取同步状态</string>
	<string name="perm_82">读取用户字典</string>
	<string name="perm_83">读取语音邮件</string>
	<string name="perm_84">重启</string>
	<string name="perm_85">接收开机广播(自启)</string>
	<string name="perm_86">接收彩信</string>
	<string name="perm_87">接收短信</string>
	<string name="perm_88">接收WAPPUSH</string>
	<string name="perm_89">录音</string>
	<string name="perm_90">排序系统任务</string>
	<string name="perm_91">结束系统任务(废弃)</string>
	<string name="perm_92">向第三方发送信息</string>
	<string name="perm_93">发送短信</string>
	<string name="perm_94">设置Activity监视者</string>
	<string name="perm_95">设置闹钟</string>
	<string name="perm_96">设置总是退出</string>
	<string name="perm_97">设置动画缩放</string>
	<string name="perm_98">设置调试程序</string>
	<string name="perm_99">设置屏幕方向</string>
	<string name="perm_100">设置指针速度</string>
	<string name="perm_101">设置应用偏好(废弃)</string>
	<string name="perm_102">设置进程限制</string>
	<string name="perm_103">设置系统时间</string>
	<string name="perm_104">设置系统时区</string>
	<string name="perm_105">设置壁纸</string>
	<string name="perm_106">设置壁纸建议</string>
	<string name="perm_107">发送永久进程信号</string>
	<string name="perm_108">状态栏控制</string>
	<string name="perm_109">访问订阅内容</string>
	<string name="perm_110">显示订阅内容</string>
	<string name="perm_111">系统级窗口(悬浮窗可用)</string>
	<string name="perm_112">转换IR</string>
	<string name="perm_113">移除快捷方式</string>
	<string name="perm_114">更新设备状态</string>
	<string name="perm_115">使用证书</string>
	<string name="perm_116">使用SIP视频服务</string>
	<string name="perm_117">使用震动器</string>
	<string name="perm_118">唤醒锁定(锁屏保持运行)</string>
	<string name="perm_119">写入APN接入点</string>
	<string name="perm_120">写入日程</string>
	<string name="perm_121">写入联系人</string>
	<string name="perm_122">写入外部存储</string>
	<string name="perm_123">写入Google地图数据</string>
	<string name="perm_124">写入历史记录和书签</string>
	<string name="perm_125">写入配置文件(build.prop/priv-app)</string>
	<string name="perm_126">读写系统安全敏感设置</string>
	<string name="perm_127">读写系统设置</string>
	<string name="perm_128">写入短信</string>
	<string name="perm_129">写入社交流(priv-app)</string>
	<string name="perm_130">写入同步设置</string>
	<string name="perm_131">写入用户词典</string>
	<string name="perm_132">写入语音邮件</string>
</resources>
