<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:padding="10dp">

		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:text="@string/create_1"/>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:id="@+id/create1EditText1"/>

		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:text="@string/create_2"/>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:id="@+id/create1EditText2"/>

		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:text="@string/create_3"/>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:id="@+id/create1EditText3"/>

		<Spinner
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/create1Spinner1"/>

		<Spinner
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/create1Spinner2"/>

		<TextView
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content"
			android:text="@string/create_5"/>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:ems="10"
			android:id="@+id/create1EditText4"/>

		<ScrollView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"/>

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/create_4"
			android:id="@+id/create1Button1"/>

	</LinearLayout>

</ScrollView>

